--- a/app/views/issues/index.html.haml
+++ b/app/views/issues/index.html.haml
@@ -1,28 +1,1 @@
-%table
-  %caption= t 'site.issue'
-  %thead
-    %tr
-      %th= t 'global.title'
-      %th= t 'global.content'
-      %th= t 'global.status'
-      %th= t 'site.login_name'
-      %th= t 'global.type'
-      %th{:colspan=>5}
-  - @issues.each do |issue|
-    - c = cycle("even", "odd")
-    %tr{:class=>c}
-      %td= issue.title
-      %td= issue.content
-      %td= issue.status
-      %th= issue.user.username
-      %th= issue.itype
-      %td= link_to t('global.show'), issue
-      - if issue.open?
-        - if admin? or manager?
-          %td= link_to t('global.done'), :controller => 'board', :action => 'fix_issue', :id => issue if issue.can_fix?
-          %td= link_to t('global.close'), :controller => 'board', :action => 'close_issue', :id => issue if issue.can_shutdown?
-          - if admin?
-            %td= link_to t('global.edit'), edit_issue_path(issue)
-            %td= link_to t('global.delete'), issue, :confirm => 'Are you sure?', :method => :delete
-%br/
-= will_paginate @issues
+= render 'issues'
