--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html
   %head 
-    %title Trade
+    %title 1916S
     = stylesheet_link_tag 'hover_drop_2'
     = #javascript_include_tag :defaults
     = javascript_include_tag "iefix"
@@ -51,11 +51,15 @@
                   %li= link_to t('trade.charge_point'), '/m/payment'
                   %li= link_to t('site.my_task'), :controller=>'board', :action=>'task_show', :task_type => 'task'
                   %li= link_to t('site.my_todo'),:controller=>'board', :action=> 'task_show', :task_type => 'todo'
+                  %li= link_to t('site.my_cash'),:controller=>'board', :action=> 'task_show', :task_type => 'cash'
+                  %li= link_to t('site.service'), new_issue_url
           - if admin?
             %li{:class=>'sub'} 
               = link_to t('site.manage_center')
               %ul
                 - if admin? or manager?
+                  %li= link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
+                  %li= link_to t('site.big_cash'), :controller=>'board', :action=>'big_cash'
                   %li= link_to t('trade.manage_payment'), '/m/approve/charge'
                   %li= link_to t('trade.manage_point'), '/m/approve/payment'
                   %li= link_to t('site.issue'), issues_path
