--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,31 +1,35 @@
 %h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
+  /Edit #{resource_name.to_s.humanize}
+  = t 'account.edit_account'
+#roundshape
+  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+    = devise_error_messages!
+    %p
+      = t 'site.login_name'
+      %br/
+      = f.text_field :username
+    %p
+      = t 'page.email'
+      %br/
+      = f.text_field :email
+    %p
+      = t 'site.password'
+      %i= t 'site.leave_blank'
+      %br/
+      = f.password_field :password
+    %p
+      = t 'site.password_confirmation'
+      %br/
+      = f.password_field :password_confirmation
+    %p
+      = t 'site.current_password'
+      %i= t 'site.need_current_password'
+      %br/
+      = f.password_field :current_password
+    %p= f.submit t("site.update")
+
+#roundshape
   %p
-    = f.label :username
-    %br/
-    = f.text_field :username
-  %p
-    = f.label :email
-    %br/
-    = f.text_field :email
-  %p
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password
-  %p
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %p
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password
-  %p= f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
-= link_to "Back", :back
+    = link_to t("site.cancel_account"), registration_path(resource_name), :confirm => t("site.are_you_sure"), :method => :delete
+  %hr
+  = link_to t("page.back"), :back
