--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html
   %head 
-    %title 1916S
+    %title= t 'site.name' 
     = stylesheet_link_tag 'hover_drop_2'
     = #javascript_include_tag :defaults
     = javascript_include_tag "iefix"
@@ -33,13 +33,14 @@
           %li= link_to t('site.label'), '/'
           %li= link_to t('site.notice_center'), notices_path if user_signed_in?
 
-          %li{:class=>'sub'} 
-            = link_to t('site.task'), tasks_url
-            %ul
-              %li= link_to t('site.new_task'), new_task_url if user_signed_in?
-              %li= link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
-              %li= link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
-              %li= link_to t('site.task_type',:task_type=>'youa'), :controller=>'board', :action=>'task_list', :task_type => 'youa'
+          - if user_signed_in?
+            %li{:class=>'sub'} 
+              = link_to t('site.task'), tasks_url
+              %ul
+                %li= link_to t('site.new_task'), new_task_url if user_signed_in?
+                %li= link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
+                %li= link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
+                %li= link_to t('site.task_type',:task_type=>'youa'), :controller=>'board', :action=>'task_list', :task_type => 'youa'
 
           - if user_signed_in?
             %li{:class=>'sub'}
@@ -53,26 +54,24 @@
                   %li= link_to t('site.my_todo'),:controller=>'board', :action=> 'task_show', :task_type => 'todo'
                   %li= link_to t('site.my_cash'),:controller=>'board', :action=> 'task_show', :task_type => 'cash'
                   %li= link_to t('site.service'), new_issue_url
-          - if admin?
+
+          - if admin? or manager?
             %li{:class=>'sub'} 
               = link_to t('site.manage_center')
               %ul
-                - if admin? or manager?
-                  %li= link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
-                  %li= link_to t('site.big_cash'), 't/big_cash' #:controller=>'board', :action=>'big_cash'
-                  %li= link_to t('trade.manage_payment'), '/m/approve/charge'
-                  %li= link_to t('trade.manage_point'), '/m/approve/payment'
-                  %li= link_to t('site.issue'), issues_path
-                  %li=link_to t('notice.new_notice'), new_notice_url
+                %li= link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
+                %li= link_to t('site.big_cash'), 't/big_cash' #:controller=>'board', :action=>'big_cash'
+                %li= link_to t('trade.manage_payment'), '/m/approve/charge'
+                %li= link_to t('trade.manage_point'), '/m/approve/payment'
+                %li= link_to t('site.issue'), issues_path
+                %li=link_to t('notice.new_notice'), new_notice_url
                 - if super?
                   %li= link_to t('site.setting'), :controller=>'site', :action=>'setting'
 
           %li= link_to t('site.rule')
 
-
-          - if user_signed_in?
-            - if current_user.has_role? 'admin'
-              %li= link_to 'Admin', '/admin'
+          - if admin?
+            %li= link_to 'Admin', '/admin'
 
       #notice
         - if flash[:notice]
