--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -5,7 +5,10 @@
     - if session[:user_edit_mode] == 'password'
       = f.input :password
     - if session[:user_edit_mode] == 'role'
-      = f.input :role_objects
+      - if super?
+        = f.input :role_objects
+      - else
+        = f.input :role_objects, :collection => Role.where("name != 'super'")
 
     - if session[:user_edit_mode].nil?
       = f.input :im
