--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,14 @@
+#roundshape
+  = link_to t('global.edit'), edit_user_path(@user)
+  \|
+  = link_to t('account.trade_log'), :controller=>'account', :action=>'trade_log', :id=>@user
+  \|
+  = link_to t('account.task_log'), :controller=>'account', :action=>'task_log', :id=>@user
+  \|
+  = link_to t('global.back'), :back
+
+%br
+
 .shadow
   %p
     %b= t 'site.login_name'
@@ -13,6 +24,3 @@
     %b Account:
     = @user.account_money
 
-  = link_to t('global.edit'), edit_user_path(@user)
-  \|
-  = link_to t('global.back'), :back
