fixed bugs when user role changed then causing re-confirm problem

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
 
           %li= link_to t('site.rule')
 
-          - if admin?
+          - if super?
             %li= link_to 'Admin', '/admin'
 
       #notice
