--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,6 @@
+#roundshape
+  = link_to t('global.show'), @user
+  \|
+  = link_to t('global.back'), :back
 = render 'form'
 
-= link_to t('global.show'), @user
-\|
-= link_to t('global.back'), :back
