--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -17,4 +17,4 @@
     = f.input :title
     = f.input :content, :as => :text
     = f.input :itype, :as => :select, :collection => {'一般问题' => 'normal', '大额提现' => 'cash' } if session[:issue_type].nil?
-    = f.submit
+    = f.submit t('issue.send')
