--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,6 @@
 %table
   %caption
-    = t('site.user_manage')
+    /= t('site.user_manage')
     - form_tag :controller => 'board', :action => 'search_user' do
       = label_tag t 'site.login_name'
       = search_field_tag 'username', session[:search_username]
