--- a/app/views/account/charge.html.haml
+++ b/app/views/account/charge.html.haml
@@ -1,9 +1,17 @@
-#charge
-  - form_tag :onsubmit=>"alert('test'); return false;", :action=>'process_charge' do
-    = label_tag t('account.charge_amount')
-    = select_tag 'amount', options_for_select([100,200,500,1000,2000,5000]), :class=>'validate[require]'
-    =# number_field_tag 'amount', :class=>'validate[require]'
-    = submit_tag t('account.charge')
-  
+#mainframe
+  #charge
+    - form_tag :onsubmit=>"alert('test'); return false;", :action=>'process_charge' do
+      = label_tag t('trade.transaction_id')
+      = text_field_tag 'transaction_id'
+      %br
+      = label_tag t('account.charge_amount')
+      = select_tag 'amount', options_for_select([100,200,500,1000,2000,5000]), :class=>'validate[require]'
+      =# number_field_tag 'amount', :class=>'validate[require]'
+      %br
+      = submit_tag t('account.charge')
 
-
+#right
+  #roundshape
+    %p= t 'trade.must_input'
+    %hr
+    %p= t 'trade.bad_deal'
