--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -1,4 +1,7 @@
+#roundshape
+  = link_to t('global.show'), @task 
+  \|
+  = link_to t('global.back'), tasks_path
+
 = render 'form'
 
-= link_to t('global.show'), @task |
-= link_to t('global.back'), tasks_path
