--- a/app/views/account/_trades.html.haml
+++ b/app/views/account/_trades.html.haml
@@ -1,11 +1,10 @@
-= render 'account/head'
-
 %table
   %caption= t 'account.charge'
   %thead
     %tr
       %th=t 'site.login_name'
       %th=t 'global.price'
+      %th=t 'trade.transaction_id'
       %th=t 'trade.charged_at'
       %th=t 'global.status'
       %th=t 'global.type'
@@ -16,11 +15,12 @@
     %tr{:class=>c}
       %td= t.user.username
       %td= t.price
+      %td= t.transaction_id
       %td= t.created_at
       %td= t.status
       %td= t.trade_type
-      %td= link_to t('global.delete'), :action => 'delete_charge', :id => t if t.trade_type == 'charge' and t.request?
-      - if (admin? or manager?) and t.status != 'approved'
+      %td= link_to t('global.delete'), :controller => 'account', :action => 'delete_charge', :id => t if t.trade_type == 'charge' and t.request?
+      - if (admin? or manager?) and t.request?
         %td
           = link_to t('trade.approve'), :controller=>'account', :action=>'approve_pass', :id=>t.id
         %td
