--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -61,13 +61,13 @@
               %ul
                 %li= link_to t('site.user_manage'), users_path
                 %li= link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
-                %li= link_to t('site.big_cash'), :controller=>'board', :action=>'big_cash'
+                %li= link_to t('site.big_cash'), '/t/big_cash'
                 %li= link_to t('trade.manage_payment'), '/m/approve/charge'
-                %li= link_to t('trade.manage_point'), '/m/approve/payment'
+                %li= link_to t('trade.manage_point'), '/m/approve/point'
                 %li= link_to t('site.issue'), issues_path
                 %li=link_to t('notice.new_notice'), new_notice_url
                 - if super?
-                  %li= link_to t('site.setting'), :controller=>'site', :action=>'setting'
+                  %li= link_to t('site.setting'), '/s/setting'
 
           %li= link_to t('site.rule')
 
