--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -7,7 +7,7 @@
       = f.input :status, :as => 'radio', :collection => {t('task.unpublish') => "unpublished", t('task.publish') => "published"}
     = f.input :link
     = f.input :price
-    = f.input :transport, :as => 'select', :collection => {'顺丰' => 1, 'EMS' => 2, '申通' => 3, '圆通' => 4}
+    = f.input :transport, :as => 'select', :collection => {'顺丰' => 'sf', 'EMS' => 'ems', '申通' => 'st', '圆通' => 'yt', '韵达' => 'yd', '中通' => 'zt'}
     = f.input :transport_id
     %hr
     %li
