--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -35,6 +35,7 @@
           = link_to t('account.point'), :controller => 'account', :action => 'point', :id => user
           = link_to t('site.password'), :controller => 'account', :action => 'password', :id => user
           = link_to t('account.role'), :controller => 'account', :action => 'role', :id => user
+          = link_to t('account.score'), :controller => 'account', :action => 'score', :id => user
       %td
         = link_to t('account.confirm'), :controller => 'account', :action => 'confirm', :id => user unless user.confirmed?
         = link_to t('global.show'), user
