--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -9,7 +9,7 @@
     = label_tag t('task.worker')
     = @task.worker.username
     |
-    = label_tag t('site.price')
+    = label_tag t('global.price')
     = @task.price
 
 - semantic_form_for @issue do |f| 
