--- a/app/views/issues/index.html.haml
+++ b/app/views/issues/index.html.haml
@@ -1,1 +1,7 @@
+- if guest? or user?
+  #roundshape
+    = link_to t('issue.request'), new_issue_url
+    \|
+    = link_to t('global.back'), :back
 = render 'issues'
+
